<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vmd3_radar_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for the VMD3 mmWave radar sensor.</description>
  <maintainer email="thomas@labforge.ca">Thomas Reidemeister</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>radar_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <exec_depend>ament_python</exec_depend>
</package>
